[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "lus"
version = "0.1.0"
description = "Aplicativo para listar o uso concorrente de licenças"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: Portuguese (Brazilian)",
]

dependencies = ["dynaconf", "httpx", "scapy"]

[project.optional-dependencies]
dev = ["ipdb", "ipython"]
docs = ["mkdocs", "mkdocs-material"]
lint = ["flake8", "flake8-docstrings", "pyproject-flake8", "black", "isort"]
test = ["pytest", "pytest-cov"]

[project.scripts]
lus = "lus.lm:main"

[tool.setuptools]
py-modules = ["lus", "lum"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 79
target-version = ["py310"]
extend-exclude = '''/(
    \.eggs
    | \.git
    | \.venv
    | venv
    | _build
    | build
    | dist
    | migrations)/'''

[tool.isort]
profile = "black"
src_paths = ["lum", "lus", "tests"]
multi_line_output = 3

[tool.flake8]
max-line-length = 79
exclude = [".git", ".venv", "__pycache__", "old", "build", "dist", "migrations"]
max-complexity = 10

[tool.coverage.run]
omit = []


[project.urls]
homepage = "https://vf79.github.io/lus/"
repository = "https://github.com/vf79/lus"
